[#7] Fix label and background image alignment

--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@ html {
 
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, #000 100%), url('../images/background.png');
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  background-size: 100% 100%;
 
   font-family: 'Neuzeit';
   mix-blend-mode: normal;
